# MethPy

./: LICENSE  README.md  pyproject.toml  setup.py
MethPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
methpy/: __init__.py  check.py  plot.py  ref.py  start.py  table.py  tutorial.py
