[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MethPy"
version = "2025.1"
authors = [
  {name = "Roiati Martina", email="martiroiati@gmail.com"},
  {name = "Valente", email = "emiliano.valente1998@gmail.com"},
  {name = "Cattani Andrea", email = "acattani.ing@gmail.com"},
]
description = "A package with some tool useful in the epigenetic field, it helps to analyze the metylathion in both CpG and non-CpG cytosine"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "biopython",
  "matplotlib",
  "numpy",
  "openpyxl",
  "pandas",
  "python-docx",
  "seaborn",
  "xlsxwriter",
  "xlwings",
]


[tool.hatch.build.targets.wheel]
find = {}

[project.urls]
Homepage = "https://github.com/Smarties98/check_sequenze"

